2002-08-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Double.cs: implemented TryParse.

	* Math.cs: PowImpl is now private.

	* MissingFieldException.cs: implemented Message.

	* RuntimeMethodHandle.cs: stubbed GetFunctionPointer.

	* _AppDomain.cs: Uncommented ToString.

2002-08-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Type.cs:
	(IsValueTypeImpl): it's virtual, not abstract. Implemented.

2002-08-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ArgumentException.cs: use the field instead of the property for
	param_name.

	* ArgumentOutOfRangeException.cs: modified Message.

	* DateTime.cs: 
	(_DoParse): throw out of range exception for year. Removed check
	for month (it's done in the constructor).

2002-08-21  Miguel de Icaza  <miguel@ximian.com>

	* Environment.cs: Implemented OSVersion property.

2002-08-21  Dietmar Maurer  <dietmar@ximian.com>

	* Exception.cs: set stack_trace to null

Wed Aug 21 13:02:20 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* AppDomain.cs: implemented ToString().

2002-08-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AppDomain.cs: securityInfo can be null in CreateDomain.

2002-08-19  Dick Porter  <dick@ximian.com>

	* MonoType.cs: Add a space before the Assembly name in
	AssemblyQualifiedName (needed for resource files so the MS runtime
	can load types)

2002-08-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AppDomain.cs: parameter name when throwing ArgumentNullException.

	* ArgumentException.cs: modified Message to do what MS does.

	* ArgumentNullException.cs: don't use {0} in message.

	* Exception.cs: use Message property in ToString ().

2002-08-14  Cesar Octavio Lopez Nataren <cesar@ciencias.unam.mx>

	* WeakReference.cs: Changed the constructor and GetObjectData
	method needed for ISerializable implementation in order to be
	compatible with SOAP generated by MS.

Wed Aug 14 17:34:07 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* MonoType.cs, Type.cs: DeclaringType/ReflectedType fixes.
