@@ -1,3 +1,8 @@
+
+Tue Aug 27 16:39:47 CEST 2002 Paolo Molaro <lupus@ximian.com>
+
+	* MonoType.cs: speedup access to common data.
+
 2002-08-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* Double.cs: implemented TryParse.
